# onedrive-tray

./: CMakeLists.txt  onedrive-tray.desktop
resources/: systray.qrc
src/: Application.cpp  Application.h  IconInfo.cpp  IconInfo.h  IconStyle.h  MessagesWindow.cpp  MessagesWindow.h  MoreColoursDialogue.cpp  MoreColoursDialogue.h  Process.cpp  Process.h  Settings.cpp  Settings.h  SettingsWidget.cpp  SettingsWidget.h  SettingsWindow.cpp  SettingsWindow.h  SyncState.h  Window.cpp  Window.h  iconinfo.cpp  main.cpp  morecolors.cpp  window.cpp  window.h
src/ui/: settingswidget.ui
